# University

./: README.md
COMP3506/Part A/: plane.py
COMP3506_Complete/Part A/: dispatcher.py  dispatcher_base.py  display.py  display_base.py
COMP3506_Completed/Part A/: plane_base.py
COMP3506_Completed/Part B/: airport.py  airport_base.py  security_db.py
COMP3702/assignment-1-support-code-master/: solver.py
COMP3702/assignment-3-support-code-master/: policy_visualiser.py  solver.py
COMP3702/assignment-4-support-code-master/: solver.py
COMP3702_Complete/assignment-4-support-code-master/: tester.py
COMP3702_Completed/assignment-1-support-code-master/: laser_tank.py
COMP3702_Completed/assignment-3-support-code-master/: laser_tank.py  tester.py
COMP3702_Completed/assignment-4-support-code-master/: policy_visualiser.py
CSSE1001/Assignment 1/: assign1.py
CSSE1001/Assignment 2/: entities.py  processing.py
CSSE2002_Complete/opportunity/: rover07july2003.txt
CSSE2010/: game.c  game.h
CSSE2010_Complete/: GccApplication11.hex
CSSE2010_Complete/45296710_Project/: project.c  score.c  score.h  timer0.c
CSSE2310/ass2/: .secret.h.swp  bomb  phases.c  secret.h
CSSE2310/ass3/: 2310A  2310B  2310dealer  Assignment3.test_3amove1.0.err  Assignment3.test_3amove1.0.out  Assignment3.test_3amove5.0.err  Assignment3.test_3amove5.0.out  Assignment3.test_4asolo1.0.err  Assignment3.test_4asolo1.0.out  Assignment3.test_5acomp1.0.err  Assignment3.test_5acomp1.0.out  Assignment3.test_9bcomp2.0.err  Assignment3.test_9bcomp2.0.out  Assignment3.test_Abdisco4.0.err  Assignment3.test_Abdisco4.0.out  Assignment3.test_Abdisco5.0.err  (+1 more)
CSSE4011/: README.md
CSSE4011/GUI/: knn.py  (+9 more)
CSSE4011/csse4011_repo/apps/prac1/scu/: CMakeLists.txt
CSSE4011/csse4011_repo/apps/prac2/2b/: CMakeLists.txt  p2d.py  prj.conf  rssi2.csv
CSSE4011/csse4011_repo/apps/prac2/scu_argon/: CMakeLists.txt
CSSE7610/: README.md
(+745 files in other folders)
